Migrate common tileentities and blocks to Materials2 constants